# Face-Detection-App

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICK_REFERENCE.md  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
haarcascades/: README.md
src/: __init__.py  config.py  detector.py  main.py  style.py
src/utils/: visualization.py
tests/: __init__.py  test_config.py  test_detector.py  test_visualization.py
